# redis-json-dict

./: .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml  redis_json_dict.py  tests.py
.github/workflows/: cd.yml  ci.yml
src/redis_json_dict/: __init__.py  redis_json_dict.py
tests/: conftest.py  test_validation.py
