# contents of pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redis-json-dict"
version = "0.1.0"

dependencies = [
  "redis >=5.0",
  "orjson >=3.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/redis-json-dict"]

[project.optional-dependencies]
dev = [
  "pytest >=6.0",
]
