# contents of pyproject.toml
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/redis_json_dict/version.py"

[project]
name = "redis-json-dict"

dynamic = ["version"]

dependencies = [
  "redis >=5.0",
  "orjson >=3.9",
]

[project.optional-dependencies]
dev = [
  "pytest >=6.0",
]
